# CIFAR-100-Image-Classification

./: README.md  pyproject.toml  requirements.txt
data/: dataloaders.py
model/: config.py  model.py
optuna_trial/: optuna_func.py
train/: eval.py  train_model.py
