[project]
name = "cifar-100-image-classification"
version = "0.1.0"
description = "An Introductory deep learning group project that trains and evaluates image classification models on the CIFAR-100 dataset using PyTorch"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lightning>=2.6.5",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "rich>=15.0.0",
    "scikit-learn>=1.9.0",
    "torch>=2.12.1",
    "torchinfo>=1.8.0",
    "torchvision>=0.27.1",
    "tqdm>=4.68.3",
    "triton-windows>=3.7.1.post27",
]
